<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">


    <ImageView
        android:id="@+id/sick_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/sick"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sick_icon"
        app:layout_constraintVertical_bias="0.5"
        app:rowCount="9">


        <TextView
            android:id="@+id/country_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/country"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/country_API"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/population_API"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/population_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/population"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/totalCases_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/total_cases"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_column="0"
            app:layout_row="3" />

        <TextView
            android:id="@+id/totalCases_API"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="3" />

        <TextView
            android:id="@+id/criticalCases_API"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="4" />

        <TextView
            android:id="@+id/continent_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/continent"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/criticalCases_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/critical_cases"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_column="0"
            app:layout_row="4" />

        <TextView
            android:id="@+id/recoveryCases_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/recovery_cases"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_column="0"
            app:layout_row="5" />

        <TextView
            android:id="@+id/recoveryCases_API"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="5" />

        <TextView
            android:id="@+id/deaths_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/deaths"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_column="0"
            app:layout_row="6" />

        <TextView
            android:id="@+id/deaths_API"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="6" />

        <TextView
            android:id="@+id/continent_API"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="1" />
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>